# gedit-wheelzoom-plugin

./: meson.build
src/: gedit-wheelzoom-plugin.c  gedit-wheelzoom-plugin.h  meson.build  wheelzoom.plugin.desktop.in
